--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,16 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+/* global.css または tailwind.css */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+
 html, body {
-  width: 100%;
   height: 100%;
-  overflow-x: hidden;
+}
+
+.main-content {
+  min-height: calc(100vh - 100px); /* フッターの高さを引いた高さに調整 */
 }
 
 #__next {
@@ -103,8 +107,9 @@ ul li a:hover {
 }
 
 footer {
-  margin: 0;
-  padding: 0;
+  position: relative;
+  bottom: 0;
+  width: 100%;
 }
 
 /* レイアウト調整：フッターが画面下に固定 */
@@ -135,7 +140,7 @@ footer {
     font-size: 1em;
   }
   
-  /* ハンバーガーメニューの調整など、レスポンシブな変更もここで行う */
+ 
 }
 
 @layer base {
